@@ -22,6 +22,7 @@ repositories {
 dependencies {
     testCompile group: 'com.github.hmcts', name: 'ccd-test-definitions', version: '7.0.0'
     testCompile group: 'com.github.hmcts', name: 'befta-fw', version: '8.2.0'
+    testCompile 'com.github.hmcts:fortify-client:1.2.0:all'
 }
 // end::dependencies[]
 
@@ -41,6 +42,12 @@ sourceSets {
 configurations {
     aatCompile.extendsFrom(testCompile)
     cucumberRuntime.extendsFrom(functionalRuntime)
+}
+
+task fortifyScan(type: JavaExec)  {
+    main = "uk.gov.hmcts.fortifyclient.FortifyClientMainApp"
+    classpath += sourceSets.test.runtimeClasspath
+    jvmArgs = ['--add-opens=java.base/java.lang.reflect=ALL-UNNAMED']
 }
 
 task highLevelDataSetup(type: JavaExec) {
